Starting with the About page

--- a/themes/tema/layouts/_default/single.html
+++ b/themes/tema/layouts/_default/single.html
@@ -4,9 +4,10 @@
 {{ partial "headbar_inside.html" . }}
 {{ partial "body_pages.html" . }}
 
-<div id="general_container">
-	<h1>{{ .Title }}</h1>
-	<h2>Ha funcionat! Aquest html està fet a partir de la plantilla correcta :)</h2>
+<div id="general_container" class="about clearfix">
+	<section class="about_text">
+		{{ .Content }}
+	</section>
 </div>
 
 {{ partial "footer.html" . }}
