--- a/themes/tema/scss/styles.scss
+++ b/themes/tema/scss/styles.scss
@@ -52,6 +52,8 @@ body.body_projects {
 	max-width: $general_container_w;
 	margin: 0 auto;
 
+	font-size: 16px;
+
 }
 
 // headbar
@@ -457,4 +459,17 @@ nav .nav_back_arrow {
 	font-weight: 400;
 	font-size: 0.75em;
 
+}
+
+
+/*** About *******************************************/
+
+.about .about_text p {
+	font-family: 'Roboto Slab', serif;
+	font-weight: 400;
+
+	font-size: 2em;
+	line-height: 1.5;
+
+	margin-top: 1em;
 }
