--- a/themes/tema/static/css/styles.css
+++ b/themes/tema/static/css/styles.css
@@ -45,6 +45,9 @@ a {
 body.body_pages {
   background: white; }
 
+body.body_about {
+  background: #ff5050; }
+
 body.body_projects {
   background: #f2f2f2; }
 
@@ -256,7 +259,7 @@ body.body_projects {
   float: left;
   margin-bottom: 1em;
   width: 100%;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto', serif;
   font-weight: 400;
   line-height: 1.5; }
 
@@ -339,10 +342,13 @@ nav .nav_back_arrow {
   font-size: 0.75em; }
 
 /*** About *******************************************/
+#general_container.about {
+  color: white; }
+
 .about .about_text p {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Roboto', serif;
   font-weight: 400;
-  font-size: 2em;
+  font-size: 2.5em;
   line-height: 1.5;
   margin-top: 1em; }
 
